--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="add_word" />
     <string name="hint_word">Task...</string>
     <string name="button_save">Add</string>
-    <string name="empty_not_saved">Task not saved because it is empty.</string>
+    <string name="empty_not_saved">Write something...</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
