--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="hint_word">Task...</string>
     <string name="button_save">Add</string>
     <string name="empty_not_saved">Write something...</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="clear_all_data">Clear All</string>
+    <string name="Erase_All">Delete All Tasks Successfully</string>
+
 </resources>
